fix: y-scrollbar and width of dashboard

--- a/sfapp/public/assets/css/admin.css
+++ b/sfapp/public/assets/css/admin.css
@@ -38,6 +38,7 @@ body {
 {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.255);
     height: 100%;
+    min-width: 1200px;
     display: flex;
     flex-direction: column;
 }
