--- a/sfapp/public/assets/css/formStyle.css
+++ b/sfapp/public/assets/css/formStyle.css
@@ -67,7 +67,6 @@ section {
 
 .restOfForm {
     width: 20vw;
-    max-height: 55vh;
     overflow: auto;
     padding-right: 19vw;
     padding-left: 19vw;
